Lectures 3 and 4 and Problem set 1 uploaded

--- a/schedule.ipynb
+++ b/schedule.ipynb
@@ -26,10 +26,10 @@
    "source": [
     "[Course syllabus](syllabus.ipynb)\n",
     "\n",
-    "| Week | &nbsp; | Monday | Tuesday | Thursday |  |\n",
+    "| Week | &nbsp; | Monday | Tuesday | Thursday | &nbsp; |\n",
     "|---|---|---|---|---|---|\n",
     "|1 | (Jan 29 - Feb 2)  | [Lecture 1](lecture-1.ipynb) | [Lecture 2](lecture-2.ipynb) | [Tutorial 1](tutorial-1.ipynb) | &nbsp; | \n",
-    "|2 | (Feb 5-9) | &nbsp; | &nbsp; | &nbsp; | &nbsp; | \n",
+    "|2 | (Feb 5-9) | [Lecture 3](lecture-3.ipynb) | [Lecture 4](lecture-4.ipynb) | &nbsp; | [Problem set 1](PS1.ipynb) _due Wednesday, Feb 14_ | \n",
     "|3 | (Feb 12-16) | &nbsp; | &nbsp; | &nbsp; | &nbsp; | \n",
     "|4 | (Feb 19-23) | &nbsp; | &nbsp; | &nbsp; | &nbsp; | \n",
     "|5 | (Feb 26- Mar 1) | &nbsp; | &nbsp; | &nbsp; | &nbsp; | \n",
