--- a/PS3.ipynb
+++ b/PS3.ipynb
@@ -119,7 +119,7 @@
    "source": [
     "### Problem 2 (Adaptivity) (20 pts)\n",
     "\n",
-    "Complete the adaptive FEM code that solves the Poisson equations form the lecture. Use [this notebook](PS3_Pr2_code.ipynb)\n",
+    "Complete the adaptive FEM code that solves the Poisson equations form the lecture. Use [this notebook](Seminar_3_refine_mesh.ipynb)\n",
     "The notebook implements the following, suboptimal error estimator:\n",
     "$$ \\begin{align*} \\|\\nabla (u_h-u)\\|^2 &\\leq~~ С \\sum_T h_T^2 \\|f\\| _{L^2}^2 \\end{align*}.$$\n",
     "\n",
